[package]
name = "astrolabe"
version = "0.1.0"
edition = "2021"
description = "Date and time library for Rust. Aims to be feature rich, lightweight and easy-to-use."
homepage = "https://github.com/giyomoon/astrolabe"
documentation = "https://docs.rs/astrolabe/"
repository = "https://github.com/giyomoon/astrolabe"
readme = "README.md"
authors = ["GiyoMoon"]
license = "MIT OR Apache-2.0"
keywords = ["date", "time"]
categories = ["date-and-time"]
rust-version = "1.56"
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
]

[dependencies]
